--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
     type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />  
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <link href="style.css" rel="stylesheet">
 </head>
 <header id="nav-bar">
@@ -23,9 +24,11 @@
         <input type="submit" id="submit" value="Search">
         <h2 id="results">Total confirmed cases</h2>
      </form>
-  </div>    
+  </div>   
+  <div id='map'></div> 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
 crossorigin="anonymous"></script>
+<script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
 <script src="countries.js"></script>
 <script src="index.js"></script>    
 </body>
