changes to format query

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="info-container">
     <form id="app-form">
-        Country:<select id="countries"></select>   
+        Country:<select id="countryInput"></select>   
         Date From: <input type="text" id="from" value="2020-03-01">
         Date To: <input type="text" id="to" value="2020-04-01">      
         <input type="submit" id="submit" value="Search">
