--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link rel="icon" type="image/png" href="images/favicon.png"> 
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
-<header id="nav-bar">    
+<header>    
     <h1>COVID-19 Tracker</h1>    
 </header>
 <body>
