--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <div id="info-container">
     <form id="app-form">
         Country: <select id="countryInput"></select>   
-        Date From: <input type="text" id="from" value="2020-03-01">
-        Date To: <input type="text" id="to" value="2020-04-01">      
+        Date From: <input type="text" class="datepicker" id="from" value="2020-03-01">
+        Date To: <input type="text" class="datepicker" id="to" value="2020-04-01">      
         <input type="submit" id="submit" value="Search">
         <h2 id="results"></h2>
      </form>
