--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/theus/chart.css/v1.0.0/dist/chart.css" />
+  </head>
 <header>    
     <h1>COVID-19 Tracker</h1>    
 </header>
@@ -26,7 +27,8 @@
         <input type="submit" id="submit" value="Search">
         <h2 id="results"></h2>
      </form>
-  </div>   
+  </div> 
+  <div class="charts charts--vertical" style="overflow-y: scroll;"></div>  
   <div id='map'></div> 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
 crossorigin="anonymous"></script>
