--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <h1>COVID-19 Tracker</h1>    
 </header>
 <body>
-  <div id="info-container">
+  <div id="search-area">
     <form id="app-form">
-        Country:<select id="countryInput"></select>   
-        Date From: <input type="text" id="from" value="2020-03-01">
-        Date To: <input type="text" id="to" value="2020-04-01">      
-        <input type="submit" id="submit" value="Search">
-        <h2 id="results"></h2>
+      Country:  <select id="countryInput"></select>           
+      <input type="submit" id="submit" value="Search">        
      </form>
-  </div>   
+  </div> 
+  <section id="info-container">  
+  <div id="results" class= "hidden"></div>  
   <div id='map'></div> 
+  </section>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
 crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
