final corrections, removed console logs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div id="search-area">
     <form id="app-form">
-      Country:  <select id="countryInput"></select>           
+      Country:  <select id="countryInput" required></select>           
      <input type="submit" id="submit" value="Search">      
      </form>
   </div> 
