--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <h1>COVID-19 Tracker</h1>    
 </header>
 <body>
+  <main>
   <div id="search-area">
     <form id="app-form">
       Country:  <select id="countryInput" required></select>           
@@ -25,7 +26,9 @@
      </form>
   </div> 
   <section id="info-container">  
-  <div id="results" class= "hidden"></div>  
+  <div id="results" class= "hidden">
+    <ul id= "results-list"></ul>
+  </div>  
   <div id='map'></div> 
   </section>  
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -33,6 +36,7 @@ crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
 <script src="countries.js"></script>
-<script src="index.js"></script>    
+<script src="index.js"></script>  
+</main>  
 </body>
 </html>
